libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/access-field-index-out-of-bounds.jsonc
//@ run: fail
//@ description: Field index out of bounds should error
["::kernel::special_form::access", "data", { "#literal": 18446744073709551616 }]
//~^ ERROR field index is out of bounds
//~| ERROR cannot find value `data` in this scope
